--- a/praktika.html
+++ b/praktika.html
@@ -3,79 +3,76 @@
     <head>
         <title>Тестовое задание</title>
         <link rel="stylesheet" href="Styles/Styles.css">
-        <link rel="stylesheet" href="Fonts/Fonts.css">
+        <link rel="stylesheet" href="Styles/Fonts.css">
     </head>
     <body>
-        <div class="mygrid">
-            <!--создаём сетку на странице-->
-            <div class="oblast_head head_footer_text">
+        <main>
+            <header>
                 header
-            </div> 
+            </header> 
             <div class="cube1">
-                <div class="text1">Гений непредвзято понимает под собой конфликт. 
+                <p class="text1">Гений непредвзято понимает под собой конфликт. 
                 Закон внешнего мира, очевидно, реально подчеркивает аксиоматичный здравый смысл. 
                 Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам, 
-                поэтому закон исключённого третьего индуцирует изоморфный ротор.</div>
+                поэтому закон исключённого третьего индуцирует изоморфный ротор.</p>
             </div>
-            <div class="cube2 text2">
-                <span class="lb">Чувство однократно</span>
+            <div class="cube2">
+                <p class="text2">Чувство однократно</p>
             </div>
-            <div class="cube3 text2">
-                <span class="lb">Морено</span>
+            <div class="cube3">
+                <p class="text2">Морено</p>
             </div>
             <div class="cube4">
-                <span class="lb">Наши сотрудники</span>
+                <p class="text5">Наши сотрудники</p>
             </div>
             <div class="cube5">
-                <span class="lb">Просветляет понимающий тест</span>
+                <p class="text5">Просветляет понимающий тест</p>
             </div>
             <div class="cube6">
-                <span class="lb">Интроекция</span>
+                <p class="text5">Интроекция</p>
             </div>
             <div class="cube7">
-                <span class="lb">Конформизм</span>
+                <p class="text5">Конформизм</p>
             </div>
             <div class="cube8">
-                <span class="lb">Наши сотрудники</span>
+                <p class="text5">Наши сотрудники</p>
             </div>
             <div class="cube9">
-                <span class="lb">Понятие модернизации понимает механизм власти</span>
+                <p class="text4">Понятие модернизации понимает механизм власти</p>
             </div>
             <div class="cube10">
                 <div class="text3">
-                        <br>Фамилия ................................................. Мамай
-                        <div class="ot_pr">Станиславаленина</div>
-                        <br>Имя и отчество ........................ Владимировна
+                        <br>Фамилия .......................................................................................................... Мамай
+                        <div class="ot_pr"><br>Станиславаленина</div>
+                        Имя и отчество ................................................................................ Владимировна
                     <div class="ot_lt"><br>Номер полиса выдан заведомо</div>
-                        ложный ............................................ 01354879
-                        <p>Дата рождения .............................. 01.12.1976</p>
-                        Телефон ................................. +79254218069
+                        ложный ....................................................................................................... 01354879
+                        <p>Дата рождения ........................................................................................ 01.12.1976</p>
+                        Телефон ............................................................................................ +79254218069
                 </div>
             </div>
-            <div class="text2">
-                <img src="Images/1.jpg">
-                <div class="img_text">
-                    <span class="lb">Наши сотрудники</span>
-                </div>
+            <img src="Images/1.jpg">
+            <div class="img_text">
+                <p class="text2">Наши сотрудники</p>
             </div>
             <div class="cube11">
-                <span class="lb">Лидерство</span>
+                <p class="text5">Лидерство</p>
             </div>
             <div class="cube12">
-                <span class="lb">Однако</span>
+                <p class="text5">Однако</p>
             </div>
             <div class="cube13">
-                <span class="lb">Невероятный гений</span>
+                <p class="text5">Невероятный гений</p>
             </div>
             <div class="cube14">
-                <span class="lb">Точка перегиба</span>
+                <p class="text5">Точка перегиба</p>
             </div>
             <div class="cube15">
-                <span class="lb">Длина вектора</span>
+                <p class="text5">Длина вектора</p>
             </div>
-            <div class="oblast_footer head_footer_text">
+            <footer>
                 footer
-            </div>
-        </div>
+            </footer>
+        </main>
     </body>
 </html>
