--- a/praktika.html
+++ b/praktika.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="eu">
     <head>
         <title>Тестовое задание</title>
-        <link rel="stylesheet" href="Styles/Styles.css">
-        <link rel="stylesheet" href="Styles/Fonts.css">
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/fonts.css">
     </head>
     <body>
         <main>
             <header>
                 header
-            </header> 
+            </header>
             <div class="cube1">
                 <p class="text1">Гений непредвзято понимает под собой конфликт. 
                 Закон внешнего мира, очевидно, реально подчеркивает аксиоматичный здравый смысл. 
@@ -42,16 +42,16 @@
             </div>
             <div class="cube10">
                 <div class="text3">
-                        <br>Фамилия .......................................................................................................... Мамай
-                        <div class="ot_pr"><br>Станиславаленина</div>
-                        Имя и отчество ................................................................................ Владимировна
-                    <div class="ot_lt"><br>Номер полиса выдан заведомо</div>
-                        ложный ....................................................................................................... 01354879
-                        <p>Дата рождения ........................................................................................ 01.12.1976</p>
-                        Телефон ............................................................................................ +79254218069
+                    Фамилия ................................................................................................. Мамай
+                    <div class="ot_pr">Станиславаленина</div>
+                    Имя и отчество ....................................................................... Владимировна
+                    <div class="ot_lt">Номер полиса выдан заведомо</div>
+                    ложный .............................................................................................. 01354879
+                    <p class="DR">Дата рождения ............................................................................... 01.12.1976</p>
+                    <p class="PH">Телефон ..................................................................................... +79254218069</p>
                 </div>
             </div>
-            <img src="Images/1.jpg">
+            <img class="image" src="images/1.jpg">
             <div class="img_text">
                 <p class="text2">Наши сотрудники</p>
             </div>
