--- a/praktika.html
+++ b/praktika.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="styles/fonts.css">
     </head>
     <body>
+        <header>
+            header
+        </header>
         <main>
-            <header>
-                header
-            </header>
             <div class="cube1">
                 <p class="text1">Гений непредвзято понимает под собой конфликт. 
                 Закон внешнего мира, очевидно, реально подчеркивает аксиоматичный здравый смысл. 
@@ -51,9 +51,8 @@
                     <p class="PH">Телефон ..................................................................................... +79254218069</p>
                 </div>
             </div>
-            <img class="image" src="images/1.jpg">
-            <div class="img_text">
-                <p class="text2">Наши сотрудники</p>
+            <div class="cube_img">
+                <p class="text6">Наши сотрудники</p>
             </div>
             <div class="cube11">
                 <p class="text5">Лидерство</p>
@@ -70,9 +69,9 @@
             <div class="cube15">
                 <p class="text5">Длина вектора</p>
             </div>
-            <footer>
-                footer
-            </footer>
         </main>
+        <footer>
+            footer
+        </footer>
     </body>
 </html>
