--- a/praktika.html
+++ b/praktika.html
@@ -11,63 +11,65 @@
         </header>
         <main>
             <div class="cube1">
-                <p class="text1">Гений непредвзято понимает под собой конфликт. 
+                <p class="text text_w text1">Гений непредвзято понимает под собой конфликт. 
                 Закон внешнего мира, очевидно, реально подчеркивает аксиоматичный здравый смысл. 
                 Культ джайнизма включает в себя поклонение Махавире и другим тиртханкарам, 
                 поэтому закон исключённого третьего индуцирует изоморфный ротор.</p>
             </div>
             <div class="cube2">
-                <p class="text2">Чувство однократно</p>
+                <p class="text text_w">Чувство однократно</p>
             </div>
             <div class="cube3">
-                <p class="text2">Морено</p>
+                <p class="text text_w">Морено</p>
             </div>
             <div class="cube4">
-                <p class="text5">Наши сотрудники</p>
+                <p class="text">Наши сотрудники</p>
             </div>
             <div class="cube5">
-                <p class="text5">Просветляет понимающий тест</p>
+                <p class="text ">Просветляет понимающий тест</p>
             </div>
             <div class="cube6">
-                <p class="text5">Интроекция</p>
+                <p class="text ">Интроекция</p>
             </div>
             <div class="cube7">
-                <p class="text5">Конформизм</p>
+                <p class="text">Конформизм</p>
             </div>
             <div class="cube8">
-                <p class="text5">Наши сотрудники</p>
+                <p class="text">Наши сотрудники</p>
             </div>
             <div class="cube9">
-                <p class="text4">Понятие модернизации понимает механизм власти</p>
+                <p class="text">Понятие модернизации понимает механизм власти</p>
             </div>
             <div class="cube10">
-                <div class="text3">
+                <div>
                     Фамилия ................................................................................................. Мамай
                     <div class="ot_pr">Станиславаленина</div>
                     Имя и отчество ....................................................................... Владимировна
                     <div class="ot_lt">Номер полиса выдан заведомо</div>
                     ложный .............................................................................................. 01354879
-                    <p class="DR">Дата рождения ............................................................................... 01.12.1976</p>
-                    <p class="PH">Телефон ..................................................................................... +79254218069</p>
+                    <p class="DRPH">Дата рождения ............................................................................... 01.12.1976</p>
+                    <p class="DRPH">Телефон ..................................................................................... +79254218069</p>
                 </div>
             </div>
-            <div class="cube_img">
-                <p class="text6">Наши сотрудники</p>
+            <div class="cube_after">
+                <div class="cube_img">
+                    <p class="text text_w text2">Наши сотрудники</p>
+                </div>
             </div>
             <div class="cube11">
-                <p class="text5">Лидерство</p>
+                <p class="text">Лидерство</p>
             </div>
             <div class="cube12">
-                <p class="text5">Однако</p>
+                <p class="text">Однако</p>
             </div>
             <div class="cube13">
-                <p class="text5">Невероятный гений</p>
+                <p class="text">Невероятный гений</p>
             </div>
             <div class="cube14">
-                <p class="text5">Точка перегиба</p>
+                <p class="text">Точка перегиба</p>
             </div>
             <div class="cube15">
-                <p class="text5">Длина вектора</p>
+                <p class="text">Длина вектора</p>
             </div>
         </main>
         <footer>
